--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,11 @@ os:
 
 script:
   - GO111MODULE=on go test ./...
+
+deploy:
+  - provider: script
+    skip_cleanup: true
+    script: curl -sL https://git.io/goreleaser | bash
+    on:
+      tags: true
+      condition: $TRAVIS_OS_NAME = osx
