--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,10 @@ os:
   - osx
 
 script:
-  - GO111MODULE=on go test ./...
+  - GO111MODULE=on go test -race -coverprofile=coverage.txt -covermode=atomic ./...
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
 
 deploy:
   - provider: script
