--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,10 @@ os:
   - linux
   - osx
 
+cache:
+  directories:
+    - $HOME/gopath
+
 script:
   - GO111MODULE=on go test -race -coverprofile=coverage.txt -covermode=atomic -coverpkg=./... ./...
 
